--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN4VQd4TSybELeo6KZXM6V/",
+      "authorship_tag": "ABX9TyMtX3iCvSwH2EKiDVkG2Yrp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,56 +96,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rw-ZkiwewS05",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "30db65b2-1347-4220-a197-938e19453906"
-      },
-      "source": [
-        "ls"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;34m'My Drive'\u001b[0m/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "U-un6aUVw38Q",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "bc615edb-9292-40c8-f48c-fa42ec36a2fb"
-      },
-      "source": [
-        "cd Dataset"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/My Drive/Dataset\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "LDlK13slxMnk",
@@ -161,16 +110,45 @@
       "metadata": {
         "id": "0JYqth2Ty8-k",
         "colab_type": "code",
-        "outputId": "09079f53-da8a-46f7-aee8-59000df521a2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 979
-        }
+        "colab": {}
       },
       "source": [
-        "pd.read_csv('/content/drive/My Drive/Dataset/Salary_Data.csv',delimiter=';')"
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/Salary_Data.csv',delimiter=';')\n",
+        "x = data1.iloc [:,:-1]\n",
+        "y = data1.iloc [:,1]"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xZq1KN4y3NGh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=1/3, random_state=0)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6PcIkmbTwQk5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        },
+        "outputId": "3e3a1047-5d87-4e0c-dc28-00d859f65a78"
+      },
+      "source": [
+        "x_test"
+      ],
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,235 +173,113 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>YearsExperience</th>\n",
-              "      <th>Salary</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1.1</td>\n",
-              "      <td>39343.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1.3</td>\n",
-              "      <td>46205.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1.5</td>\n",
-              "      <td>37731.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2.0</td>\n",
-              "      <td>43525.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2.2</td>\n",
-              "      <td>39891.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2.9</td>\n",
-              "      <td>56642.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>3.0</td>\n",
-              "      <td>60150.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>3.2</td>\n",
-              "      <td>54445.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>3.2</td>\n",
-              "      <td>64445.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>3.7</td>\n",
-              "      <td>57189.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>3.9</td>\n",
-              "      <td>63218.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>4.0</td>\n",
-              "      <td>55794.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>4.0</td>\n",
-              "      <td>56957.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>4.1</td>\n",
-              "      <td>57081.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>4.5</td>\n",
-              "      <td>61111.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>4.9</td>\n",
-              "      <td>67938.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>5.1</td>\n",
-              "      <td>66029.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>5.3</td>\n",
-              "      <td>83088.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>5.9</td>\n",
-              "      <td>81363.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>6.0</td>\n",
-              "      <td>93940.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>20</th>\n",
-              "      <td>6.8</td>\n",
-              "      <td>91738.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>21</th>\n",
-              "      <td>7.1</td>\n",
-              "      <td>98273.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>7.9</td>\n",
-              "      <td>101302.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>23</th>\n",
-              "      <td>8.2</td>\n",
-              "      <td>113812.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>8.7</td>\n",
-              "      <td>109431.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>25</th>\n",
-              "      <td>9.0</td>\n",
-              "      <td>105582.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>9.5</td>\n",
-              "      <td>116969.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>27</th>\n",
-              "      <td>9.6</td>\n",
-              "      <td>112635.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>28</th>\n",
               "      <td>10.3</td>\n",
-              "      <td>122391.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>10.5</td>\n",
-              "      <td>121872.0</td>\n",
+              "      <th>13</th>\n",
+              "      <td>4.1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>3.9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>9.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>8.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>9.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>5.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>7.9</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    YearsExperience    Salary\n",
-              "0               1.1   39343.0\n",
-              "1               1.3   46205.0\n",
-              "2               1.5   37731.0\n",
-              "3               2.0   43525.0\n",
-              "4               2.2   39891.0\n",
-              "5               2.9   56642.0\n",
-              "6               3.0   60150.0\n",
-              "7               3.2   54445.0\n",
-              "8               3.2   64445.0\n",
-              "9               3.7   57189.0\n",
-              "10              3.9   63218.0\n",
-              "11              4.0   55794.0\n",
-              "12              4.0   56957.0\n",
-              "13              4.1   57081.0\n",
-              "14              4.5   61111.0\n",
-              "15              4.9   67938.0\n",
-              "16              5.1   66029.0\n",
-              "17              5.3   83088.0\n",
-              "18              5.9   81363.0\n",
-              "19              6.0   93940.0\n",
-              "20              6.8   91738.0\n",
-              "21              7.1   98273.0\n",
-              "22              7.9  101302.0\n",
-              "23              8.2  113812.0\n",
-              "24              8.7  109431.0\n",
-              "25              9.0  105582.0\n",
-              "26              9.5  116969.0\n",
-              "27              9.6  112635.0\n",
-              "28             10.3  122391.0\n",
-              "29             10.5  121872.0"
+              "    YearsExperience\n",
+              "2               1.5\n",
+              "28             10.3\n",
+              "13              4.1\n",
+              "10              3.9\n",
+              "26              9.5\n",
+              "24              8.7\n",
+              "27              9.6\n",
+              "11              4.0\n",
+              "17              5.3\n",
+              "22              7.9"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 23
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6PcIkmbTwQk5",
+        "id": "ILktg1Ld8Yuk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "6c820bfb-c054-4bfa-d584-538f72c0aa48"
       },
       "source": [
-        ""
+        "y_test"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-6x-g7z2pxPJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#Dataset\n",
-        "data = gc.open('Salary_Data.csv',delimiter =';')\n",
-        "sheet = data.worksheet('Salary_Data')\n",
-        "rows = sheet.get_all_values()\n",
-        "dt = pd.DataFrame.from_records(rows)\n",
-        "dt"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2      37731.0\n",
+              "28    122391.0\n",
+              "13     57081.0\n",
+              "10     63218.0\n",
+              "26    116969.0\n",
+              "24    109431.0\n",
+              "27    112635.0\n",
+              "11     55794.0\n",
+              "17     83088.0\n",
+              "22    101302.0\n",
+              "Name: Salary, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
     }
   ]
 }
